--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -43,3 +43,11 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.top-java-disabled {
+    color: lightsteelblue;
+}
+
+.top-java-enabled {
+    color: darkslategray;
+}
